# maxML

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI_maxML.yaml
maxML/: __init__.py  config_schemas.py  evaluators.py  pipeline.py  preprocessors.py  run.py  utils.py
maxML/data_models/: pipeline_model.py
maxML/pipelines/: demo_pipeline.py
pipelines/: demo_pipeline.py
tests/: config_schemas_test.py  conftest.py  evaluators_test.py  pipeline_test.py  preprocessors_test.py  utils_test.py
tests/data_models/: pipeline_model_test.py
tests/test_configs/: columntransformer_logistic.yaml  columntransformer_poly_logistic.yaml  featureunion_logistic.yaml  invalid_preprocessor.yaml  linear_model.yaml  logistic_model.yaml  no_evaluators.yaml  no_preprocessor.yaml  no_preprocessors.yaml  two_preprocessors_logistic.yaml
tests/test_data/: gemini_sample_data.csv
