[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxML"
dynamic = ["version"]
description = "An ML framework built on top of scikit-learn Pipelines"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Max Cantor", email = "maxcan7@gmail.com" }
]
maintainers = [
  {name = "Max Cantor", email = "maxcan7@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "pandas>=2.2.2",
  "pydantic>=2.8.2",
  "scikit-learn>=1.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "reorder-python-imports>=3.13.0",
    "ruff>=0.6.0",
]

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.+)"

[tool.ruff]
line-length = 88
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=maxML --cov-report html --cov-fail-under=80"
