[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "maxML"
dynamic = ["version"]
description = "An ML framework built on top of scikit-learn Pipelines"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  {name = "Max Cantor", email = "maxcan7@gmail.com" }
]
maintainers = [
  {name = "Max Cantor", email = "maxcan7@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "pandas>=3.0.2",
  "pydantic>=2.13.3",
  "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "isort>=8.0.1",
    "ruff>=0.15.12",
]

[tool.hatch.version]
source = "vcs"

[tool.isort]
force_single_line = true
line_length = 88

[tool.ruff]
line-length = 88
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=maxML --cov-report html --cov-fail-under=100"
